# cpak

./: Cargo.toml  README.md
src/: apps.rs  location.rs  main.rs  resolver.rs
src/apps/: vscode.rs
src/resolver/: vscode.rs
